# OpenNova

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  OpennovaRepair.md  README.md  README.zh-CN.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  doc-drift.yml  pr-review.yml
.opencode/: opencode.json
.opennova/skills/code_repair/: SKILL.md
docs/: API.en.md  API.md  QUICKSTART.en.md  QUICKSTART.md  TUTORIAL.en.md  TUTORIAL.md  code_repair_skill_usage.md  experiment_protocol.md
docs/develop/: 01_plan.md  02_plan.md  03_plan.md  04_plan.md  05_plan.md  06_plan.md  07_plan.md  08_plan.md  09_plan.md  10_plan.md  11_plan.md  12_plan.md  13_plan.md  14_plan.md  README.md
repair_bench/datasets/arithmetic_operator_bug_1/: buggy.py  metadata.json  test_buggy.py
repair_bench/datasets/arithmetic_operator_bug_2/: buggy.py  metadata.json  test_buggy.py
repair_bench/datasets/arithmetic_operator_bug_3/: buggy.py  metadata.json  test_buggy.py
repair_bench/scripts/: evaluate.py  run_opennova_repair.py  run_pure_llm.py
src/opennova/: __init__.py  automation.py  checkpoints.py  config.py  hooks.py  main.py  plugins.py  sdk.py  transcript.py
src/opennova/cli/: __init__.py  commands.py  (+17 more)
tests/: __init__.py  test_03_productization.py  test_04_plan_execution.py  test_05_plan_execution.py  test_06_plan_execution.py  test_07_plan_execution.py  test_08_plan_execution.py  test_09_plan_execution.py  test_10_plan_execution.py  test_11_plan_execution.py  test_12_plan_execution.py  test_13_plan_execution.py  test_14_p0_reliability.py  test_14_p1_execution.py  test_automation_scheduler.py  test_basic.py  test_claude_alignment_foundation.py  test_code_quality_regressions.py  test_hooks.py  test_layered_memory.py  test_mcp_resources.py  test_memory_storage.py  test_multiple_tool_calls.py  test_permission_modes.py  test_phase2.py  test_phase3.py  test_plugins.py  test_process_sandbox.py  test_project_guide.py  test_python_diagnostics_tool.py  test_python_symbol_tools.py  test_repair_bench.py  test_runtime_state_store.py  test_sdk_and_worktree.py  test_security_hardening.py  test_session_v2.py  test_tui_blocks.py  test_tui_context_workbench.py  test_tui_tool_progress.py  test_workflow_routing.py
(+194 files in other folders)
